testsuite/tests/properties/override/test.out
== FooNode ==
test.py:33: error: expected type MiddleNode, got FooNode instead (expected type comes from overridden base property in MiddleNode)

== MiddleNode ==
Code generation was successful

== NullNode ==
test.py:33: error: expected type MiddleNode, got NullNode instead (expected type comes from overridden base property in MiddleNode)

Done
